# zero2prod

./: .env.sample  Cargo.toml  Dockerfile  bacon.toml  compose.yaml  configuration.yaml  rustfmt.toml  spec.yaml
.cargo/: config.toml
.github/workflows/: audit.yml  general.yml
.sqlx/: query-3cfccf1bc38af6f15c539b04f314ea1e4831fdf1e691bb068ed27e5bcca75ff8.json  query-58b85555ad3b71a5295dec73bf0ebb7e45dad3dc1579276fdc0081afc02d7eec.json  query-f51f0b4c2c9ae8bf3ff880a94690ee100abf7077e97bc091afeb310d4316f59b.json
configuration/: base.toml  base.yaml  production.toml  production.yaml
migrations/: 20250411201206_create_subscription_tokens_table.sql  20250417235551_add_status_subscriptions_tokens.sql  20250418003239_make_sub_token_status_not_null.sql
scripts/: db_init.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs  subscription_token.rs
src/routes/: confirm_subscriptions.rs  health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: confirm_subscriptions.rs  health_check.rs  helpers.rs  subscriptions.rs
