[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"
authors = ["Oscar Roa <sm.composed109@passinbox.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
config = "0.15.11"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4.40", default-features = false, features = ["clock"] }
uuid = { version = "1.16.0", features = ["v7", "v4"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
axum = { version = "0.8.3", features = ["macros"] }

[dependencies.sqlx]
version = "0.8.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
reqwest = "0.12.12"
