[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"
authors = ["Oscar Roa <sm.composed109@passinbox.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
config = "0.15.11"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4.40", default-features = false, features = ["clock"] }
uuid = { version = "1.16.0", features = ["v7", "v4"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
axum = { version = "0.8.3", features = ["macros"] }
secrecy = { version = "0.10.3", features = ["serde"] }
tower-http = { version = "0.6.2", features = ["trace"] }
serde-aux = "4.6.0"
unicode-segmentation = "1.12.0"
validator = "0.20.0"
rand = { version= "0.9.0", features = ["std_rng"] }

[dependencies.sqlx]
version = "0.8.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dependencies.reqwest]
version = "0.12.15"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
claims = "0.8.0"
fake = "4.3.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
wiremock = "0.6.3"
serde_json = "1.0.140"
linkify = "0.10.0"
